add widget chat mob, add widget markets mob

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -59,7 +59,10 @@
       </div>
     </div>
   </div>
-  <div class="widget__content">
+  <div class="widget__header--mob">
+    <div class="widget__name-mob">Chat</div>
+  </div>
+  <div class="widget__content widget__content--show-all">
     <div class="widget__chat-wrap">
       <div class="widget__message-wrap widget__message-wrap--left">
         <div class="widget__message-icon">
