--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="dashboard">
   <div class="dashboard__widget-wrap">
 
-    <div class="dashboard__item dashboard__item--width2">
-      <app-graph></app-graph>
-    </div>
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
+      <!--<app-graph></app-graph>-->
+    <!--</div>-->
 
     <div class="dashboard__item dashboard__item--width1">
       <app-markets></app-markets>
@@ -21,13 +21,13 @@
       <app-trade-history></app-trade-history>
     </div>
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
-      <!--<app-orders></app-orders>-->
-    <!--</div>-->
+    <div class="dashboard__item dashboard__item--width2 dashboard__item--hide-mob">
+      <app-orders></app-orders>
+    </div>
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
-      <!--<app-chat></app-chat>-->
-    <!--</div>-->
+    <div class="dashboard__item dashboard__item--width1">
+      <app-chat></app-chat>
+    </div>
 
     <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
     <!--<app-active-pair></app-active-pair>-->
