--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -109,6 +109,16 @@
       fill: #000;
     }
   }
+  &__search-btn{
+    align-self: center;
+    margin-right: 12px;
+    color: $darker-blue;
+    svg{
+      fill: $darker-blue;
+      margin-right: 4px;
+      vertical-align: bottom;
+    }
+  }
   &__content {
     display: none;
     position: relative;
@@ -116,6 +126,11 @@
     overflow-x: hidden;
     overflow-y: scroll;
     &--mob {
+      display: block;
+      //height: 100%;
+    }
+    &--show-all{
+      //height: 100%;
       display: block;
     }
   }
@@ -129,6 +144,36 @@
     }
     .tabs__item--big {
       margin: 0;
+    }
+  }
+  &__markets-tabs{
+    margin: 0;
+    padding: 0 8px;
+    .tabs__item {
+      &--active{
+        border-top: 2px solid $darker-blue;
+        border-bottom: 0;
+        &:before,&:after{
+          content: '';
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 50%;
+          -webkit-transform: translate(-50%,-100%);
+          -ms-transform: translate(-50%,-100%);
+          transform: translate(-50%,-100%);
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-width: 0px 9px 6px 9px;
+          border-color: transparent transparent $darker-blue  transparent;
+        }
+        &:after{
+          bottom: 1px;
+          border-width:  0px 6px 4px 6px;
+          border-color:  transparent transparent #fff transparent;
+        }
+      }
     }
   }
   &__table {
@@ -193,54 +238,55 @@
         color: $red;
       }
     }
+    .change-indicate{
+      &--green{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 25px;
+        width: 60px;
+        margin-left: auto;
+        margin-right: 16px;
+        color: $green;
+        span{
+          font-size: 10px;
+          opacity: .5;
+          padding-top: 4px;
+          margin-left: 2px;
+        }
+      }
+      &--red{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 25px;
+        width: 60px;
+        margin-left: auto;
+        margin-right: 16px;
+        color:$red;
+        span{
+          font-size: 10px;
+          opacity: .5;
+          padding-top: 4px;
+          margin-left: 2px;
+        }
+      }
+    }
   }
-  //trading
-  &__buy-sell-btn-wrap {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-  }
-  &__buy-sell-btn {
-    display: flex;
-    width: 100%;
-    height: 40px;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    text-decoration: none;
-    &:hover {
-      text-decoration: none;
+  &__table-markets-mob{
+    .table__cell-head{
+      padding-top: 8px;
+      padding-bottom: 8px;
     }
-    &--green {
-      color: $green;
-      background-color: rgba(0, 180, 61, 0.1);
-      border-left: 4px solid;
-      border-color: $green;
-    }
-    &--red {
-      color: $red;
-      background-color: rgba(235, 87, 87, 0.1);
-      border-right: 4px solid;
-      border-color: $red;
-    }
-    &--single-green {
-      color: $green;
-      border-left: 4px solid $green;
-      border-right: 4px solid $green;
-      background-color: rgba(0, 180, 61, 0.1);
-    }
-    &--single-red {
-      color: $red;
-      border-left: 4px solid $red;
-      border-right: 4px solid $red;
-      background-color: rgba(235, 87, 87, 0.1);
+    .table__row-star{
+      svg{
+        fill:#E5E5E5;
+      }
     }
   }
   //chat start
   &__chat-wrap {
-    margin-right: 32px;
+    margin-right: 16px;
     margin-left: 16px;
     height: 100%;
     overflow-y: scroll;
@@ -256,7 +302,7 @@
       }
       .widget__message {
         text-align: left;
-        margin-right: 28px;
+        margin-right: 12px;
         background-color: $darker-white;
         &:after {
           left: -4px;
@@ -338,7 +384,7 @@
     line-height: 14px;
     color: $grey;
     opacity: .5;
-    margin-top: 12px;
+    margin-top: 6px;
   }
   &__message-day {
     margin-top: 24px;
@@ -374,12 +420,25 @@
     }
   }
   &__input-img {
+    position: absolute;
+    right: 12px;
+    top: 10px;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
     &--hide-mob {
       display: none;
+    }
+    &--second-icon {
+      right: 42px;
+    }
+    img {
+      width: 100%;
     }
 
   }
   //chat end
+
   //trading start
   &__trading-form {
     display: none;
@@ -458,7 +517,6 @@
     &--mr32 {
       margin-right: 32px;
     }
-
   }
   &__trading-btn {
     width: 100%;
@@ -467,6 +525,49 @@
     font-size: 18px;
     line-height: 40px;
     margin: 28px auto 0;
+  }
+  &__buy-sell-btn-wrap {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+  }
+  &__buy-sell-btn {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    text-decoration: none;
+    &:hover {
+      text-decoration: none;
+    }
+    &--green {
+      color: $green;
+      background-color: rgba(0, 180, 61, 0.1);
+      border-left: 4px solid;
+      border-color: $green;
+    }
+    &--red {
+      color: $red;
+      background-color: rgba(235, 87, 87, 0.1);
+      border-right: 4px solid;
+      border-color: $red;
+    }
+    &--single-green {
+      color: $green;
+      border-left: 4px solid $green;
+      border-right: 4px solid $green;
+      background-color: rgba(0, 180, 61, 0.1);
+    }
+    &--single-red {
+      color: $red;
+      border-left: 4px solid $red;
+      border-right: 4px solid $red;
+      background-color: rgba(235, 87, 87, 0.1);
+    }
   }
   //trading end
   /*--- elements end ---*/
@@ -500,6 +601,10 @@
       &--mob {
         display: none;
       }
+      &--show-all{
+        //height: calc(100% - 45px);
+        display: block;
+      }
     }
     &__tabs {
       &--hide-mob {
@@ -524,7 +629,16 @@
       }
 
     }
-
+    &__chat-wrap {
+      margin-right: 32px;
+    }
+    &__message-wrap {
+      &--left {
+        .widget__message {
+          margin-right: 28px;
+        }
+      }
+    }
     &__search, &__send-message {
       position: absolute;
       bottom: 0;
@@ -554,20 +668,8 @@
       padding-right: 68px;
     }
     &__input-img {
-      position: absolute;
-      right: 12px;
-      top: 10px;
-      display: inline-block;
-      width: 18px;
-      height: 18px;
       &--hide-mob {
         display: inline-block;
-      }
-      &--second-icon {
-        right: 42px;
-      }
-      img {
-        width: 100%;
       }
     }
     &__scroll {
@@ -610,7 +712,6 @@
       font-size: 24px;
       margin: 44px 0 0;
     }
-
     /*--- elements end ---*/
   }
 }
@@ -655,6 +756,12 @@
         fill: #fff;
       }
     }
+    &__search-btn{
+      color: #fff;
+      svg{
+        fill: #fff;
+      }
+    }
     &__table {
       .table__row {
         &:hover {
@@ -664,17 +771,28 @@
     }
     &__table-row{
       background-color: unset;
+      .change-indicate{
+        &--green{
+          background-color: $green;
+          color:#fff;
+          border-radius: 1px;
+        }
+        &--red{
+          background-color: $red;
+          color:#fff;
+          border-radius: 1px;
+        }
+      }
     }
     &__scroll {
       background-color: rgba(255, 255, 255, .1);
     }
-
     &__message-wrap {
       &--left {
         .widget__message {
-          background-color: rgba(25, 26, 57, 0.5);
+          background-color: #21417D;
           &:after {
-            border-right: 4px solid rgba(25, 26, 57, 0.5);
+            border-right: 4px solid #21417D;
           }
         }
         .widget__message-text {
@@ -741,6 +859,26 @@
         color: $light-blue;
       }
     }
+    &__table-markets-mob{
+      thead{
+        background-color: rgba(255,255,255,.1);
+      }
+      .table__row-star{
+        svg{
+          fill:#4A5D88;
+        }
+      }
+    }
+    &__markets-tabs{
+      background-color: #21417D;
+      .tabs__item {
+        &--active{
+          &:after{
+            border-color:  transparent transparent #21417D transparent;
+          }
+        }
+      }
+    }
     /*--- elements end ---*/
   }
 }
@@ -751,8 +889,22 @@
       &--gradient {
         background: linear-gradient(to bottom, rgba(48, 49, 77, 1) 0%, rgba(35, 123, 239, .3) 100%);
       }
+      &__message-wrap {
+        &--left {
+          .widget__message {
+            background-color: rgba(25, 26, 57, 0.5);
+            &:after {
+              border-right: 4px solid rgba(25, 26, 57, 0.5);
+            }
+          }
+        }
+      }
+      &__table-markets-mob{
+        thead{
+          background-color: transparent;
+        }
+      }
     }
-
   }
 }
 
