--- a/src/app/dashboard/trading/sell/sell.component.html
+++ b/src/app/dashboard/trading/sell/sell.component.html
@@ -73,7 +73,7 @@
     <button class="btn btn--active widget__trading-btn">Sell BTC</button>
   </form>
 </div>
-<div class="widget__content widget__content--mob">
+<div class="widget__content widget__content--mob" style="height: 100%;">
   <div class="widget__header--mob">
     <div class="widget__name-mob widget__trade-title widget__trade-title--red"><img src="../../assets/img/btc-icon.svg" alt="">Sell BTC</div>
     <div class="dropdown widget__limit-dropdown">
