add dashdoard left slide menu

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="dashboard">
   <div class="dashboard__widget-wrap">
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
-      <!--<app-graph></app-graph>-->
-    <!--</div>-->
+    <div class="dashboard__item dashboard__item--width2">
+      <app-graph></app-graph>
+    </div>
 
     <div class="dashboard__item dashboard__item--width1">
       <app-markets></app-markets>
