--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -179,17 +179,45 @@
     </div>
   </div>
   <div class="header-mob__inner">
-    <div class="header-mob__submenu"><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link1.svg"><span class="header-mob__submenu-link-text">Graph</span></a><a class="header-mob__submenu-link" href="#"><img class="header-mob__submenu-link-img" src="../../assets/img/trade.svg"><span class="header-mob__submenu-link-text">Trade</span></a>
-      <a
-        class="header-mob__submenu-link" href="index.html"><img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg"><span class="header-mob__submenu-link-text">Balances</span></a><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link4.svg"><span class="header-mob__submenu-link-text">History</span></a>
-        <a
-          class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/orders.svg"><span class="header-mob__submenu-link-text">Open</span></a><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/markets.svg"><span class="header-mob__submenu-link-text">Markets</span></a>
-          <a
-            class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link3.svg"><span class="header-mob__submenu-link-text">Book</span></a><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link6.svg"><span class="header-mob__submenu-link-text">Chat</span></a></div>
-    <a
-      class="header-mob__link header-mob__link-burger" >
-      <div class="header-mob__link-inner" (click)="openMenu()"><img class="header-mob__link-img" src="../../assets/img/header-mob-burger.svg"></div>
+    <div class="header-mob__submenu">
+      <a class="header-mob__submenu-link">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/graph.svg">
+        <span class="header-mob__submenu-link-text">Graph</span>
       </a>
+      <a class="header-mob__submenu-link" href="#">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/trade.svg">
+        <span class="header-mob__submenu-link-text">Trade</span>
+      </a>
+      <a class="header-mob__submenu-link" href="index.html">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg">
+        <span class="header-mob__submenu-link-text">Balances</span>
+      </a>
+      <a class="header-mob__submenu-link">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/history.svg">
+        <span class="header-mob__submenu-link-text">History</span>
+      </a>
+        <a class="header-mob__submenu-link">
+          <img class="header-mob__submenu-link-img" src="../../assets/img/orders.svg">
+          <span class="header-mob__submenu-link-text">Open</span>
+        </a>
+      <a class="header-mob__submenu-link">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/markets.svg">
+        <span class="header-mob__submenu-link-text">Markets</span>
+      </a>
+      <a class="header-mob__submenu-link">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/order-book.svg">
+        <span class="header-mob__submenu-link-text">Book</span>
+      </a>
+      <a class="header-mob__submenu-link">
+        <img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link6.svg">
+        <span class="header-mob__submenu-link-text">Chat</span>
+      </a>
+    </div>
+    <a class="header-mob__link header-mob__link-burger" >
+      <div class="header-mob__link-inner" (click)="openMenu()">
+        <img class="header-mob__link-img" src="../../assets/img/header-mob-burger.svg">
+      </div>
+    </a>
   </div>
 </header>
 <!-- HEADER MOBILE END-->
