--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -31,6 +31,7 @@
 @import "components/note";
 @import "components/widget";
 @import "components/currency-pair-info";
+@import "components/dashboard-tools";
 //@import "components/footer";
 @import "components/modal";
 /*--- PAGES ---*/
