--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,39 +1,71 @@
 <div class="dashboard">
   <div class="dashboard__widget-wrap">
 
-    <div class="dashboard__item dashboard__item--width2">
-      <app-graph></app-graph>
-    </div>
+    <ngx-gridster #gridsterContainer
+                  [options]="gridsterOptions"
+                  [draggableOptions]="{ handlerClass: 'panel-heading' }">
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
-      <!--<app-markets></app-markets>-->
-    <!--</div>-->
+       <ngx-gridster-item *ngFor="let widget of widgets; let index = index" [options]="gridsterItemOptions"
+          [(x)]="widget.x" [(y)]="widget.y" [(w)]="widget.w" [(h)]="widget.h"
+          [(xSm)]="widget.xSm" [(ySm)]="widget.ySm" [(wSm)]="widget.wSm" [(hSm)]="widget.hSm"
+          [(xMd)]="widget.xMd" [(yMd)]="widget.yMd" [(wMd)]="widget.wMd" [(hMd)]="widget.hMd"
+          [(xLg)]="widget.xLg" [(yLg)]="widget.yLg" [(wLg)]="widget.wLg" [(hLg)]="widget.hLg"
+          [(xXl)]="widget.xXl" [(yXl)]="widget.yXl" [(wXl)]="widget.wXl" [(hXl)]="widget.hXl"
+          [(dragAndDrop)]="widget.dragAndDrop" [(resizable)]="widget.resizable">
+          <ng-template [ngTemplateOutlet]="loadWidgetTemplate(widget.type)" [ngTemplateOutletContext]="{ $implicit: index}">
+        </ng-template>
+      </ngx-gridster-item>
 
-    <div class="dashboard__item dashboard__item--width1">
-      <app-trading></app-trading>
-    </div>
+    </ngx-gridster>
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
-      <!--<app-order-book></app-order-book>-->
-    <!--</div>-->
 
-    <div class="dashboard__item dashboard__item--width1">
-      <app-trade-history></app-trade-history>
-    </div>
+    <ng-template #graph let-index>
+       <app-graph (changeItemSize)="changeItemSize($event)"
+                  (removeItem)="removeItem(index)">
+       </app-graph>
+    </ng-template>
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
-      <!--<app-orders></app-orders>-->
-    <!--</div>-->
+    <ng-template #markets let-index>
+       <app-markets (changeItemSize)="changeItemSize($event)"
+                    (removeItem)="removeItem(index)">
+       </app-markets>
+    </ng-template>
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
-      <!--<app-chat></app-chat>-->
-    <!--</div>-->
+    <ng-template #trading let-index>
+       <app-trading (changeItemSize)="changeItemSize($event)"
+                    (removeItem)="removeItem(index)">
+       </app-trading>
+    </ng-template>
+
+    <ng-template #orderBook let-index>
+       <app-order-book (changeItemSize)="changeItemSize($event)"
+                       (removeItem)="removeItem(index)" class="dashboard-item">
+       </app-order-book>
+    </ng-template>
+
+    <ng-template #tradeHistory let-index>
+       <app-trade-history (changeItemSize)="changeItemSize($event)"
+                          (removeItem)="removeItem(index)">
+       </app-trade-history>
+    </ng-template>
+
+    <ng-template #chat let-index>
+       <app-chat (changeItemSize)="changeItemSize($event)"
+                 (removeItem)="removeItem(index)">
+       </app-chat>
+    </ng-template>
+
+    <ng-template #orders let-index>
+      <app-orders (changeItemSize)="changeItemSize($event)"
+                (removeItem)="removeItem(index)">
+      </app-orders>
+    </ng-template>
+
 
     <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
     <!--<app-active-pair></app-active-pair>-->
     <!--</div>-->
 
   </div>
-
 </div>
 
