--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -13,19 +13,20 @@
     left: -88px;
     height: 100%;
     //max-width: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     border-right: 4px solid $darker-blue;
     background-color: $dark-indigo;
     color:#fff;
-    //-webkit-transition: 0.2s ease all;
-    //-moz-transition: 0.2s ease all;
-    transition: 1s ease all;
+    -webkit-transition: 0.5s ease all;
+    -moz-transition: 0.5s ease all;
+    transition: 0.5s ease all;
     &:hover{
       left: 0;
       //max-width: 94px;
-      //-webkit-transition: 0.2s ease all;
-      //-moz-transition: 0.2s ease all;
-      transition: 1s ease all;
+      -webkit-transition: 0.5s ease all;
+      -moz-transition: 0.5s ease all;
+      transition: 0.5s ease all;
     }
     /*--- modificators start ---*/
     /*--- modificators end ---*/
