--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -9,7 +9,7 @@
     display: inline-block;
     position: absolute;
     z-index: 900;
-    top: 0;
+    top: 20px;
     left: -88px;
     height: 100%;
     //max-width: 0px;
@@ -34,7 +34,7 @@
     &__header{
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content:center;
       padding: 4px 0;
       border-bottom: 1px solid $darker-blue ;
       margin-bottom: 20px;
