add currency pair popup desctop

--- a/src/app/dashboard/ico-search/ico-search.component.html
+++ b/src/app/dashboard/ico-search/ico-search.component.html
@@ -1,3 +1,302 @@
-<p>
-  ico-search works!
-</p>
+<div class="pair-popup">
+  <div class="pair-popup__close">
+    <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M7.35355 1.35355C7.54882 1.15829 7.54882 0.841709 7.35355 0.646447C7.15829 0.451184 6.84171 0.451184 6.64645 0.646447L7.35355 1.35355ZM0.646447 6.64645C0.451184 6.84171 0.451184 7.15829 0.646447 7.35355C0.841709 7.54882 1.15829 7.54882 1.35355 7.35355L0.646447 6.64645ZM1.35355 0.646447C1.15829 0.451184 0.841709 0.451184 0.646447 0.646447C0.451184 0.841709 0.451184 1.15829 0.646447 1.35355L1.35355 0.646447ZM6.64645 7.35355C6.84171 7.54882 7.15829 7.54882 7.35355 7.35355C7.54882 7.15829 7.54882 6.84171 7.35355 6.64645L6.64645 7.35355ZM6.64645 0.646447L0.646447 6.64645L1.35355 7.35355L7.35355 1.35355L6.64645 0.646447ZM0.646447 1.35355L6.64645 7.35355L7.35355 6.64645L1.35355 0.646447L0.646447 1.35355Z" />
+    </svg>
+  </div>
+  <div class="pair-popup__header">
+    <div class="wrap-input pair-popup__input">
+      <input class="wrap-input__input" type="text" required>
+      <label class="wrap-input__label" for="">Keyword of the coin</label>
+      <div class="wrap-input__icon">
+        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+        </svg>
+      </div>
+      <div class="wrap-input__line"></div>
+    </div>
+    <div class="pair-popup__header-txt">
+      <img src="../../assets/img/fire-green.svg">
+      - Opened ICOs in which you can invest
+    </div>
+    <div class="pair-popup__header-txt">
+      <img src="../../assets/img/fire-red.svg">
+      - ICOs to be closed
+    </div>
+  </div>
+  <div class="pair-popup__content">
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">A</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">AAA</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">B</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">BBB</div>
+        <div class="pair-popup__currency">
+
+          BMA
+        </div>
+        <div class="pair-popup__currency">BNT</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          BREP
+        </div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          BPL
+        </div>
+        <div class="pair-popup__currency">BNE</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">C</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">CCC</div>
+        <div class="pair-popup__currency">CMA</div>
+        <div class="pair-popup__currency">CDR</div>
+        <div class="pair-popup__currency">CWR</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          CWY
+        </div>
+        <div class="pair-popup__currency">CMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          CPL
+        </div>
+        <div class="pair-popup__currency">CWB</div>
+        <div class="pair-popup__currency">CTB</div>
+        <div class="pair-popup__currency">CN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">D</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">DDD</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">E</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">BBB</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">F</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">AAA</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">G</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">DDD</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">H</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">BBB</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">I</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">AAA</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">J</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">AAA</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">I</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">DDD</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">K</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">BBB</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+    <div class="pair-popup__group">
+      <div class="pair-popup__group-title">L</div>
+      <div class="pair-popup__group-content">
+        <div class="pair-popup__currency">AAA</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-green.svg">
+          AMA
+        </div>
+        <div class="pair-popup__currency">ADR</div>
+        <div class="pair-popup__currency">AERT</div>
+        <div class="pair-popup__currency">AWY</div>
+        <div class="pair-popup__currency">AMY</div>
+        <div class="pair-popup__currency">
+          <img src="../../assets/img/fire-red.svg">
+          APL
+        </div>
+        <div class="pair-popup__currency">AWB</div>
+        <div class="pair-popup__currency">ATB</div>
+        <div class="pair-popup__currency">AN</div>
+      </div>
+    </div>
+  </div>
+
+</div>
