--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,4 +1,5 @@
 .dashboard__widget-wrap{
+  min-width: 1200px;
   padding: 20px 0;
 }
 
@@ -7,6 +8,8 @@ ngx-gridster-item {
   padding: 10px 15px;
   border: 1px dashed #dce4f1;
   overflow: hidden;
-}
+  .gridster-item-inner{
 
+  }
+}
 
