--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -7,7 +7,8 @@
 @media (min-width:1200px) {
   .dashboard-tools{
     display: inline-block;
-    position: absolute;
+    position: fixed;
+    padding-top: 80px;
     z-index: 900;
     top: 20px;
     left: -88px;
