--- a/src/assets/scss/components/_pair-popup.scss
+++ b/src/assets/scss/components/_pair-popup.scss
@@ -1,37 +1,51 @@
 .pair-popup{
   position: relative;
-  margin: 0 32px;
-  padding: 0 16px 0;
-  border: 1px solid $grey;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  padding: 0 12px 0;
   /*--- modificators start ---*/
   /*--- modificators end ---*/
   /*--- elements start ---*/
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+  }
+  &__title{
+    font-size: 24px;
+    line-height: 26px;
+  }
+  &__close-mob{
+    svg{
+      fill: $darker-blue;
+    }
+  }
   &__close{
-    position: absolute;
-    right: 16px;
-    top: 12px;
+    display: none;
+    margin-left: auto;
+    top: 0;
     &:hover{
       cursor: pointer;
     }
     svg{
+      vertical-align: top;
       fill:#000;
     }
   }
   &__header{
     display: flex;
-    align-items: center;
-    margin-top: 20px;
-    border-bottom: 1px solid $grey;
+    flex-direction: column;
+    margin-top: 18px;
+
   }
   &__input{
-    width: 260px;
-    margin-right: 32px;
     .wrap-input__input{
       padding-left: 32px;
       &:focus{
+        ~.wrap-input__label{
+          left: 12px;
+        }
+      }
+      &:valid{
         ~.wrap-input__label{
           left: 12px;
         }
@@ -40,9 +54,6 @@
     .wrap-input__label{
       left: 32px;
     }
-    .wrap-input__line{
-      display: none;
-    }
     .wrap-input__icon{
       svg{
         fill:$grey;
@@ -50,15 +61,10 @@
     }
   }
   &__header-txt{
-    display: flex;
-    align-items: center;
-    margin-right: 32px;
-    img{
-      margin-right: 4px;
-    }
+    display: none;
   }
   &__content{
-    margin-top: 28px;
+    margin-top: 12px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -67,15 +73,27 @@
     overflow-x: hidden;
   }
   &__group{
-    width: 200px;
-    //max-width: calc(100% / 5);
+    width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 4px;
   }
   &__group-title{
+    position: relative;
     text-transform: uppercase;
     font-size: 12px;
     margin-bottom: 8px;
+    color: $darker-blue;
+    &:after{
+      content: '';
+      display: block;
+      position: absolute;
+      top: 6px;
+      right: 0;
+      height: 1px;
+      width: calc(100% - 10px);
+      background-color: $darker-blue;
+    }
   }
   &__group-content{
     display: flex;
@@ -99,13 +117,82 @@
 /*--- media start ---*/
 @media (min-width:600px) {}
 @media (min-width:900px) {}
-@media (min-width:1200px) {}
+@media (min-width:1200px) {
+  .pair-popup{
+    margin: 0 32px;
+    padding: 0 16px;
+    border: 1px solid $grey;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    &__close-mob{
+      display: none;
+    }
+    &__title{
+      display: none;
+    }
+    &__close{
+      display: block;
+    }
+    &__header{
+      flex-direction: row;
+      align-items: center;
+      margin-top: 20px;
+      border-bottom: 1px solid $darker-blue;
+    }
+    &__input{
+      width: 260px;
+      margin-right: 32px;
+      .wrap-input__input{
+        border-color: $darker-blue;
+        &:valid{
+          ~.wrap-input__label{
+            color: $darker-blue;
+          }
+        }
+      }
+      .wrap-input__icon{
+        svg{
+          fill: $darker-blue;
+        }
+      }
+      .wrap-input__line{
+        display: none;
+      }
+    }
+    &__header-txt{
+      display: flex;
+      align-items: center;
+      margin-right: 32px;
+      img{
+        margin-right: 4px;
+      }
+    }
+    &__content{
+      margin-top: 24px;
+    }
+    &__group{
+      width: 200px;
+      //margin: 0;
+    }
+    &__group-title{
+      &:after{
+        display: none;
+      }
+    }
+  }
+}
 /*--- media end ---*/
 
 /*--- DARK THEME START---*/
 .dark-theme{
   .pair-popup{
     border-color: $light-blue;
+    &__close-mob{
+      svg{
+        fill: $light-blue;
+      }
+    }
     &__close{
       svg{
         fill:#fff;
@@ -115,6 +202,14 @@
       border-bottom-color: $light-blue;
     }
     &__input{
+      .wrap-input__input{
+        border-color: $light-blue;
+        &:valid{
+          ~.wrap-input__label{
+            color: $light-blue;
+          }
+        }
+      }
       .wrap-input__icon{
         svg{
           fill:$light-blue;
@@ -123,6 +218,9 @@
     }
     &__group-title{
      color:$light-blue;
+      &:after{
+        background: $light-blue;
+      }
     }
   }
 }
