--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -32,6 +32,7 @@
 @import "components/widget";
 @import "components/currency-pair-info";
 @import "components/pair-popup";
+@import "components/market-search";
 @import "components/dashboard-tools";
 //@import "components/footer";
 @import "components/modal";
