--- a/src/assets/scss/components/_market-search.scss
+++ b/src/assets/scss/components/_market-search.scss
@@ -69,6 +69,29 @@
 /*--- DARK THEME START---*/
 .dark-theme{
   .market-search{
+    &__input{
+      .wrap-input__input{
+        &:focus{
+          ~.wrap-input__icon{
+            svg{
+              fill:$light-blue;
+            }
+          }
+        }
+        &:valid{
+          ~.wrap-input__icon{
+            svg{
+              fill:$light-blue;
+            }
+          }
+        }
+      }
+      .wrap-input__icon{
+        svg{
+          fill:$light-blue;
+        }
+      }
+    }
     .table__row{
       background-color: transparent;
     }
