create trading widget notification

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -34,6 +34,7 @@
 @import "components/pair-popup";
 @import "components/market-search";
 @import "components/dashboard-tools";
+@import "components/trading-notification";
 //@import "components/footer";
 @import "components/modal";
 /*--- PAGES ---*/
